<resources>
    <string name="app_name">Angelwood Student</string>
    <string name="loading">loading. . .</string>
    <string name="studentGenderText">Gender</string>
    <string name="studentEmailHint">Email</string>
    <string name="studentPasswordHint">Password</string>
    <string name="studentFullNameHint">Full Name</string>
    <string name="studentNIMHint">NIM</string>
    <string name="studentAgeHint">Age</string>
    <string name="studentAddressHint">Address</string>
    <string name="studentRegisterTitle">Register as Student</string>
    <string name="studentEmailLoginHint">Email</string>
    <string name="studentPasswordLoginHint">Password</string>
    <string name="lecturerGenderText">Gender</string>
    <string name="lecturerNameHint">Name</string>
    <string name="lecturerExpertiseHint">Expertise</string>
    <string name="studentLoginTitle">Login as Student</string>
    <string name="addLecturerTitle">Add Lecturer</string>
    <string name="lecturerFemaleRadioButtonText">Female</string>
    <string name="lecturerMaleRadioButtonText">Male</string>
    <string name="studentFemaleRadioButtonText">Female</string>
    <string name="studentMaleRadioButtonText">Male</string>
    <string name="studentRegisterBtn">Register</string>
    <string name="addLecturerBtnText">Add Lecturer</string>
    <string name="studentLoginBtnText">Login</string>
    <string name="addCourseTitle">Add Course</string>
    <string name="courseSubjectHint">Course Subject</string>
    <string name="courseDayText">Day</string>
    <string name="courseTimeText">Time</string>
    <string name="courseLecturerText">Lecturer</string>
    <string name="addCourseBtnText">Add Course</string>
    <string name="mainToolbarTitle">Homepage</string>
    <string name="starterToolbarTitle">Starter</string>
    <string name="companionText">Your All-Time Companion</string>
    <string name="lecturerDataTitle">Lecturer Data</string>
    <string name="lecturerList">Lecturer List</string>
    <string name="expertiseLabel">Expertise:</string>
    <string name="lecturerDetailTitle">Lecturer Detail</string>
    <string name="textLecturerExpertise">Expertise</string>
    <string name="studentList">Student List</string>
    <string name="studentDataTitle">Student Data</string>
    <string name="menu_schedule">My Schedule</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_account">My Account</string>
    <string name="addlecturer">Add Lecturer</string>
    <string name="editlecturer">Edit Lecturer</string>
    <string name="addStudent">Add Student</string>
    <string name="editStudent">Edit Student</string>
    <string name="editCourse">Edit Course</string>
    <string name="courseDataTitle">Course Data</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="lecturer"></string-array>
    <string-array name="timeStart">
        <item>07:30:00</item>
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd0730">
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd0800">
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd0830">
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd0900">
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd0930">
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1000">
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1030">
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1100">
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1130">
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1200">
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1230">
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1300">
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1330">
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1400">
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1430">
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1500">
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1530">
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1600">
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="timeEnd1630">
        <item>17:00:00</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoutBtnText">Logout</string>
    <string name="greetingadmin">Good Day, Admin</string>
    <string name="menu_home">Home</string>
    <string name="myprofiletxt">Student Profile</string>
    <string name="academictext">Academic</string>
    <string name="mydatatxt">Student Data</string>
    <string name="personaltxt">Personal</string>
    <string name="changepp">Edit Profile Picture</string>
    <string name="menu_tasks">Tasks</string>
    <string name="essayTxt">Essay</string>
    <string name="videoTxt" />
    <string name="vidTxt">Video</string>
    <string name="codingTxt">Coding</string>
    <string name="taskTxt">Short Description:</string>
    <string name="taskTypeTxt">Type:</string>
    <string name="addnewtasktxt">Add New Task</string>
    <string name="otherTxt">Others</string>
    <string name="infoTxt">Course Info</string>
    <string name="courselist">Course List</string>
    <string name="enrollBtn">Enroll</string>
    <string name="removeScheduleBtn">Remove</string>
    <string name="editAccBtn">Edit</string>
    <string name="updAccBtn">Update</string>
    <string name="editAccToolbar">Edit Account</string>
    <string name="fcm_key">AAAAiDIUYMA:APA91bHwkUplB74z4OXFchbQQgcAmLDvX-E1NeASJVVdvAdHQE_1TCoHqZI6teFC42HnZNJrWYw5m-QFmVrx_HSoc9VG-XM1odctaaXp7TlI_MTMd__QNStglvCEo7Ry0EG7XOYE4-EI</string>
</resources>