<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLecturer">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/addLecturerToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/addLecturerTitle" />

            <ImageView
                android:id="@+id/lecturerImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addLecturerToolbar"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lecturerNameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lecturerImg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lecturerNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lecturerGenderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lecturerGenderText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/lecturerNameInput"
                app:layout_constraintTop_toBottomOf="@+id/lecturerNameInput" />

            <RadioGroup
                android:id="@+id/lecturerGenderRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/lecturerNameInput"
                app:layout_constraintStart_toStartOf="@+id/lecturerNameInput"
                app:layout_constraintTop_toBottomOf="@+id/lecturerGenderTextView" >

                <RadioButton
                    android:id="@+id/lecturerFemaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturerFemaleRadioButtonText" />

                <RadioButton
                    android:id="@+id/lecturerMaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturerMaleRadioButtonText" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lecturerExpertiseInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/lecturerGenderRadioGroup"
                app:layout_constraintStart_toStartOf="@+id/lecturerGenderRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/lecturerGenderRadioGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lecturerExpertiseHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addLecturerBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/addLecturerBtnText"
                app:layout_constraintEnd_toEndOf="@+id/lecturerExpertiseInput"
                app:layout_constraintStart_toStartOf="@+id/lecturerExpertiseInput"
                app:layout_constraintTop_toBottomOf="@+id/lecturerExpertiseInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>