<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3EE"
    tools:context=".StudentRegister">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/studentRegisterToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/student_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/studentRegisterTitle" />

            <ImageView
                android:id="@+id/registerImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/studentRegisterToolbar"
                app:srcCompat="@drawable/student"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentEmailRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerImg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentEmailHint"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentPasswordRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentEmailRegisterInput"
                app:layout_constraintStart_toStartOf="@+id/studentEmailRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentEmailRegisterInput"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentPasswordHint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentFullNameRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentPasswordRegisterInput"
                app:layout_constraintStart_toStartOf="@+id/studentPasswordRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentPasswordRegisterInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentFullNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentNIMRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentFullNameRegisterInput"
                app:layout_constraintStart_toStartOf="@+id/studentFullNameRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentFullNameRegisterInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentNIMHint"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentAgeRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentGenderRegisterRadioGroup"
                app:layout_constraintStart_toStartOf="@+id/studentGenderRegisterRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/studentGenderRegisterRadioGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentAgeHint"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentAddressRegisterInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentAgeRegisterInput"
                app:layout_constraintStart_toStartOf="@+id/studentAgeRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentAgeRegisterInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/studentAddressHint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/studentGenderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/studentGenderText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/studentNIMRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentNIMRegisterInput" />

            <RadioGroup
                android:id="@+id/studentGenderRegisterRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/studentNIMRegisterInput"
                app:layout_constraintStart_toStartOf="@+id/studentNIMRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentGenderTextView">

                <RadioButton
                    android:id="@+id/studentMaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/studentMaleRadioButtonText" />

                <RadioButton
                    android:id="@+id/studentFemaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/studentFemaleRadioButtonText" />

            </RadioGroup>

            <Button
                android:id="@+id/studentRegisterBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:enabled="false"
                android:hapticFeedbackEnabled="true"
                android:text="@string/studentRegisterBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/studentAddressRegisterInput"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="@+id/studentAddressRegisterInput"
                app:layout_constraintTop_toBottomOf="@+id/studentAddressRegisterInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>